[package]
name = "biliplus-proxy"
version = "0.1.0"
authors = ["Youmu <johnmave126@gmail.com>"]
edition = "2018"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
ureq = "2.1.0"
tencent_scf = { version = "0.2.0", features = ["builtin-api-gateway"], path = "../../" }
thiserror = "1.0.24"
